--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="app">
-      <button id="stopper-btn" type="button">STOP!</button>
+      <button id="stopper-btn" type="button">やめさせる</button>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
