いいかんじ

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
   </head>
   <body>
     <div id="app">
-      <button id="stopper-btn" type="button">やめさせる</button>
+      <button id="stopper-btn" type="button">
+        <img
+          src="public/metukiwaruneko.png"
+          alt="目つき悪い猫"
+          class="cat-img"
+        />
+        <img src="public/mark_batsu.png" alt="バツ" class="batsu-img" />
+        <span class="btn-text">やめさせる</span>
+      </button>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
